# tech-product-tracker

./: README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
src/: config.py  main.py
src/alerts/: telegram.py  telegram_handler.py
src/data/: microcenter.csv  products.db
src/fetchers/: __init__.py  microcenter.py
src/modes/: __init__.py  automated.py  interactive.py
src/parsers/: __init__.py  microcenter.py
src/processing/: microcenter.py
src/storage/: csv_writer.py  db_store.py
src/storage/db/: __init__.py  connection.py  migrations.py  models.py  queries.py
src/tests/: db_performance_test.py  test_performance.db
src/utils/: __init__.py  get_html.py  store_selector.py
