[project]
name = "tech-product-tracker"
version = "0.1.0"
description = "Track tech product prices and availability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "python-telegram-bot",
    "python-telegram-bot-calendar",
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "schedule>=1.2.2",
    "playwright>=1.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.poetry.dependencies]
sqlite3 = "*"  # Usually comes with Python
